# sphinx-stubs-for-vale

./: .vale.ini  README.rst  pyproject.toml  standalone-test.py  temp.py  test.rst
sphinx_stubs_for_vale/: __init__.py
tests/: test_not_sphinx.py
vale-tests/: .vale.ini  README.rst  test.rst  vale-innards.rst
vale-tests/styles/Test/: spelling.yml  substitutions.yml
