[tool.poetry]
name = "not-sphinx"
version = "0.1.0"
description = ""
authors = ["Tibs <tibs@tonyibbs.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
docutils = "^0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
